app style and main color colorpicker added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,14 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <top.defaults.colorpicker.ColorPickerView
-        android:id="@+id/colorPicker"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:enableBrightness="true"
-        app:enableAlpha="false"
-        android:layout_margin="18dp"
-        />
+        android:layout_height="match_parent">
+
+        <top.defaults.colorpicker.ColorPickerView
+            android:id="@+id/colorPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:enableBrightness="true"
+            app:enableAlpha="false"
+            android:layout_margin="18dp"
+            />
+
+        <Button
+            android:id="@+id/maincolors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hauptfarben"
+            android:layout_below="@+id/colorPicker"
+            android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/powerbutton"
