--- a/app/src/main/res/drawable/rename.xml
+++ b/app/src/main/res/drawable/rename.xml
@@ -5,8 +5,8 @@
     android:height="200dp">
     <path
         android:pathData="M20.005 5.995h-1v2h1v8h-1v2h1c1.103 0 2 -0.897 2 -2v-8C22.005 6.893 21.107 5.995 20.005 5.995zM6.005 9.995H15V13.995H6.005z"
-        android:fillColor="#000000" />
+        android:fillColor="?attr/colorControlNormal" />
     <path
         android:pathData="M17.005 17.995v-12V4H20V2h-8v2h3.005v1.995h-11c-1.103 0 -2 0.897 -2 2v8c0 1.103 0.897 2 2 2h11V20H12v2h8v-2h-2.995V17.995zM4.005 15.995v-8h11v8H4.005z"
-        android:fillColor="#000000" />
+        android:fillColor="?attr/colorControlNormal" />
 </vector>
