--- a/app/src/main/res/layout/loading_indicator.xml
+++ b/app/src/main/res/layout/loading_indicator.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="48dp"
-    android:layout_height="48dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="55dp"
+    android:layout_height="55dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:indeterminateDrawable="@drawable/progressbar"
+    <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:progress="50"/>
+        app:lottie_fileName="loading.json"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
+        app:lottie_speed="2"
+        />
 
 </RelativeLayout>
