--- a/app/src/main/res/layout/main_navigation.xml
+++ b/app/src/main/res/layout/main_navigation.xml
@@ -20,7 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu"
-        android:background="@android:color/white"/>
+        app:menu="@menu/bottom_nav_menu"/>
 
 </RelativeLayout>
