--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#424242</color>
-    <color name="colorPrimaryDark">#1b1b1b</color>
+    <color name="colorPrimary">#2c3e50</color>
+    <color name="colorPrimaryDark">#1B3147</color>
 
     <color name="primaryLightColor">#6d6d6d</color>
 
-    <color name="colorAccent">#424242</color>
+    <color name="colorAccent">#3498db</color>
 
     <color name="primaryTextColor">#ffffff</color>
 
